# judgment_letter

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/utils/: helper_email.py
templates/: template-msg.html
