[tool.poetry]
name = "judgment-letter"
version = "0.2.0"
description = "In search of justice (which does not exist)"
authors = ["3agoskin <kirillzagoskin.work@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.4"
selenium = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
